# eConEXG

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  publish.bat  pyproject.toml
.github/workflows/: static.yml
DFocus/: index.html
changelog/: index.html
docs/: DFocus.md  about.md  changelog.md  eConAlpha.md  iFocus.md  iRecorder.md  iSense.md  index.md  lightStimulator.md  triggerBoxWire.md  triggerBoxWireless.md
eConAlpha/: index.html
eConEXG/eConAlpha/: data_parser.py  data_reader.py
eConEXG/iFocus/: data_reader.py  device_socket.py  eegParser.py  emgParser.py
eConEXG/iRecorder/: __init__.py  data_reader.py
eConEXG/iRecorder/physical_interface/: wifi_windows.py
eConEXG/triggerBox/: triggerbox.py
examples/: iRecorder_LSL_Example.py  test_DFocus.py  test_eConAlpha.py  test_eConBeta.py  test_iFocus.py  test_iRecorder.py  test_iSense.py  test_triggerboxWire.py  test_triggerboxWireless.py
iFocus/: index.html
iRecorder/: index.html
iSense/: index.html
lightStimulator/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/about/: index.html
site/changelog/: index.html
site/iFocus/: index.html
site/iRecorder/: index.html
site/lightStimulator/: index.html
site/search/: search_index.json
site/triggerBoxWire/: index.html
site/triggerBoxWireless/: index.html
src/eConEXG/: __init__.py  version.py
src/eConEXG/DFocus/: __init__.py  data_parser.py  data_reader.py  device_socket.py
src/eConEXG/eConAlpha/: __init__.py  data_parser.py  data_reader.py  device_socket.py
src/eConEXG/iFocus/: __init__.py  data_parser.py  data_reader.py  device_socket.py  eegParser.py  emgParser.py  iFocusParser.py
src/eConEXG/iRecorder/: __init__.py  data_parser.py  data_reader.py  default_config.py  device.py  device_socket.py  transform.c
src/eConEXG/iRecorder/bluetooth/: btcommon.py  msbt.py
src/eConEXG/iRecorder/bluetooth/windows/: _msbt.cp310-win_amd64.pyd  _msbt.cp312-win_amd64.pyd
src/eConEXG/iRecorder/physical_interface/: __init__.py  bluetooth.py  bt.py  com.py  device_socket.py  virtual_interface.py  wifi_linux.py  wifi_macos.py  wifi_windows.py
src/eConEXG/iRecorder/physical_interface/bluetooth/: __init__.py
src/eConEXG/iRecorder/physical_interface/bluetooth/windows/: _msbt.cp311-win_amd64.pyd  _msbt.cp39-win_amd64.pyd
src/eConEXG/iSense/: __init__.py  data_parser.py  dev_socket.py  device.py  iRecorder.py  transform.c  transform.dylib
src/eConEXG/triggerBox/: __init__.py  triggerbox.py
src/eConEXG/utils/: ArrayQueue.py  __init__.py  bdfWrapper.py  filter.py  lslWrapper.py
tests/: iFocus.py  iRecorder.py  lightstim.py  test_iFocus.py  test_iRecorder.py  test_iRecorder8K.py  test_lightstim.py  test_spec.py  test_triggerboxWire.py  test_triggerboxWireless.py
triggerBoxWire/: index.html
triggerBoxWireless/: index.html
